# A_stock_reasearch

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: collect_stock_snapshot.py  market_signal_report.py
src/ashare_research/: __init__.py  announcements.py  common.py  external.py  fundamentals.py  market.py  news.py  research.py  signals.py  snapshot.py  valuation.py
